Adding capability to have descriptions on triggers

--- a/roles/lib_zabbix/tasks/create_template.yml
+++ b/roles/lib_zabbix/tasks/create_template.yml
@@ -44,8 +44,9 @@
     zbx_server: "{{ server }}"
     zbx_user: "{{ user }}"
     zbx_password: "{{ password }}"
-    description: "{{ item.description }}"
-    dependencies: "{{ item.dependencies | default([], true) }}"
+    name: "{{ item.name }}"
+    description: "{{ item.description | default('', True) }}"
+    dependencies: "{{ item.dependencies | default([], True) }}"
     expression: "{{ item.expression }}"
     priority: "{{ item.priority }}"
     url: "{{ item.url | default(None, True) }}"
