Verify again that ansible version is different than 1.9.0 and 1.9.0.1

--- a/roles/openshift_facts/tasks/main.yml
+++ b/roles/openshift_facts/tasks/main.yml
@@ -3,6 +3,8 @@
   assert:
     that:
     - ansible_version | version_compare('1.8.0', 'ge')
+    - ansible_version | version_compare('1.9.0', 'ne')
+    - ansible_version | version_compare('1.9.0.1', 'ne')
 
 - name: Gather Cluster facts
   openshift_facts:
