--- a/roles/os_zabbix/vars/template_openshift_master.yml
+++ b/roles/os_zabbix/vars/template_openshift_master.yml
@@ -6,8 +6,25 @@ g_template_openshift_master:
     applications:
     - Openshift Master
     key: create_app
+
+  - key: openshift.master.process.count
+    description: Shows number of master processes running
+    type: int
+    applications:
+    - Openshift Master
+
   ztriggers:
   - name: 'Application creation has failed on {HOST.NAME}'
     expression: '{Template Openshift Master:create_app.last(#1)}=1 and {Template Openshift Master:create_app.last(#2)}=1'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/check_create_app.asciidoc'
     priority: avg
+
+  - name: 'Openshift Master process not running on {HOST.NAME}'
+    expression: '{Template Openshift Master:openshift.master.process.count.max(#3)}<1'
+    url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/openshift_master.asciidoc'
+    priority: high
+
+  - name: 'Too many Openshift Master processes running on {HOST.NAME}'
+    expression: '{Template Openshift Master:openshift.master.process.count.min(#3)}>1'
+    url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/openshift_master.asciidoc'
+    priority: high
