--- a/playbooks/common/openshift-node/config.yml
+++ b/playbooks/common/openshift-node/config.yml
@@ -181,6 +181,7 @@
   - role: flannel
     when: openshift.common.use_flannel | bool
   - role: nickhammond.logrotate
+    when: not is_atomic
   - role: fluentd_node
     when: openshift.common.use_fluentd | bool
   tasks:
