--- a/roles/openshift_storage_nfs_lvm/tasks/nfs.yml
+++ b/roles/openshift_storage_nfs_lvm/tasks/nfs.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install NFS server
   yum: name=nfs-utils state=present
+  when: not is_atomic
 
 - name: Start rpcbind
   service: name=rpcbind state=started enabled=yes
