--- a/playbooks/common/openshift-etcd/config.yml
+++ b/playbooks/common/openshift-etcd/config.yml
@@ -85,7 +85,7 @@
     when: etcd_server_certs_missing
   roles:
   - etcd
-  - role: nickhammond.logrotate
+  - { role: nickhammond.logrotate, when: not is_atomic }
 
 - name: Delete temporary directory on localhost
   hosts: localhost
