--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -201,6 +201,7 @@
   roles:
   - openshift_master
   - role: nickhammond.logrotate
+    when: not is_atomic
   - role: fluentd_master
     when: openshift.common.use_fluentd | bool
   post_tasks:
