--- a/roles/etcd/tasks/main.yml
+++ b/roles/etcd/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: Install etcd
   yum: pkg=etcd-2.* state=present
+  when: not is_atomic
 
 - name: Validate permissions on the config dir
   file:
