--- a/roles/fluentd_node/tasks/main.yml
+++ b/roles/fluentd_node/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- fail:
+    msg: "fluentd node is not yet supported on atomic hosts"
+  when: is_atomic
+
 # TODO: Update fluentd install and configuration when packaging is complete
 - name: download and install td-agent
   yum:
