--- a/roles/kube_nfs_volumes/tasks/main.yml
+++ b/roles/kube_nfs_volumes/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- fail:
+    msg: "That playbook is not yet supported on atomic hosts"
+  when: is_atomic
+
 - name: Install pyparted (RedHat/Fedora)
   yum: name=pyparted,python-httplib2 state=present
 
