--- a/roles/openshift_master_ca/tasks/main.yml
+++ b/roles/openshift_master_ca/tasks/main.yml
@@ -2,9 +2,11 @@
 - name: Install the base package for admin tooling
   yum: pkg={{ openshift.common.service_type }}{{ openshift_version  }} state=present
   register: install_result
+  when: not is_atomic
 
 - name: Reload generated facts
   openshift_facts:
+  when: install_result | changed
 
 - name: Create openshift_master_config_dir if it doesn't exist
   file:
