--- a/roles/os_firewall/tasks/firewall/iptables.yml
+++ b/roles/os_firewall/tasks/firewall/iptables.yml
@@ -7,6 +7,7 @@
   - iptables
   - iptables-services
   register: install_result
+  when: not is_atomic
 
 - name: Check if firewalld is installed
   command: rpm -q firewalld
