--- a/roles/os_zabbix/vars/template_openshift_master.yml
+++ b/roles/os_zabbix/vars/template_openshift_master.yml
@@ -13,6 +13,13 @@ g_template_openshift_master:
     applications:
     - Openshift Master
 
+  - key: openshift.master.user.pod.running.count
+    description: Shows number of total user pods in a cluster
+    type: int
+    applications:
+    - Openshift Master
+
+
   ztriggers:
   - name: 'Application creation has failed on {HOST.NAME}'
     expression: '{Template Openshift Master:create_app.last(#1)}=1 and {Template Openshift Master:create_app.last(#2)}=1'
@@ -28,3 +35,9 @@ g_template_openshift_master:
     expression: '{Template Openshift Master:openshift.master.process.count.min(#3)}>1'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/openshift_master.asciidoc'
     priority: high
+ 
+  - name: 'There are over 1000 user in the cluster checked on {HOST.NAME}'
+    expression: '{Template Openshift Master:openshift.master.user.pod.running.count.last(0)}>1000{Template Openshift Master:openshift.master.user.pod.running.count.last(0)}>1000'
+    url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/openshift_master.asciidoc'
+    priority: avg
+ 
