--- a/roles/os_zabbix/vars/template_openshift_master.yml
+++ b/roles/os_zabbix/vars/template_openshift_master.yml
@@ -37,7 +37,7 @@ g_template_openshift_master:
     priority: high
  
   - name: 'There are over 1000 user in the cluster checked on {HOST.NAME}'
-    expression: '{Template Openshift Master:openshift.master.user.pod.running.count.last(0)}>1000{Template Openshift Master:openshift.master.user.pod.running.count.last(0)}>1000'
+    expression: '{Template Openshift Master:openshift.master.user.pod.running.count.last(0)}>1000'
     url: 'https://github.com/openshift/ops-sop/blob/master/V3/Alerts/openshift_master.asciidoc'
     priority: avg
  
