--- a/roles/openshift_common/tasks/main.yml
+++ b/roles/openshift_common/tasks/main.yml
@@ -13,6 +13,7 @@
       sdn_network_plugin_name: "{{ os_sdn_network_plugin_name | default(None) }}"
       deployment_type: "{{ openshift_deployment_type }}"
       use_fluentd: "{{ openshift_use_fluentd | default(None) }}"
+      use_cluster_metrics: "{{ openshift_use_cluster_metrics | default(None) }}"
 
 - name: Set hostname
   hostname: name={{ openshift.common.hostname }}
